--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <label class="form-label">Search genes (comma-separated, case-insensitive):</label>
             <div id="geneTags" class="tag-input" contenteditable="true"></div>
             <div id="suggestions" class="autocomplete-suggestions"></div>
-            <button type="button" id="loadExample" class="btn btn-info btn-sm mt-2">Load Example Genes</button>
+            <button type="button" id="loadExample" class="btn btn-info btn-sm mt-2">Load Example: HSD Genes</button>
         </div>
 
         <!-- Dynamic Filters Accordion -->
